force-app/main/default/objects/Airplane__c/fields/Callsign__c.field-meta.xml
<CustomField>
    <fullName>Callsign__c</fullName>
    <description>Callsign of the vehicle (8 chars). Can be null if no callsign has been received.</description>
    <label>Callsign</label>
    <length>10</length>
    <type>Text</type>
</CustomField>