force-app/main/default/objects/Airplane__c/fields/ICAO24__c.field-meta.xml
<CustomField>
    <fullName>ICAO24__c</fullName>
    <label>ICAO24</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>