force-app/main/default/objects/Airplane__c/fields/Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact__c</fullName>
    <description>Unix timestamp (seconds) for the last update in general. This field is updated for any new, valid message received from the transponder.</description>
    <label>Last Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>