force-app/main/default/objects/Airplane__c/fields/On_Ground__c.field-meta.xml
<CustomField>
    <fullName>On_Ground__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean value which indicates if the position was retrieved from a surface position report.</description>
    <label>On Ground</label>
    <type>Checkbox</type>
</CustomField>