force-app/main/default/objects/Airplane__c/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <description>Country name inferred from the ICAO 24-bit address.</description>
    <label>Origin Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>