force-app/main/default/objects/Airplane__c/fields/Previous_Location__c.field-meta.xml
<CustomField>
    <fullName>Previous_Location__c</fullName>
    <label>Previous Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>