force-app/main/default/objects/Airplane__c/fields/SPI__c.field-meta.xml
<CustomField>
    <fullName>SPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether flight status indicates special purpose indicator.</description>
    <label>SPI</label>
    <type>Checkbox</type>
</CustomField>