force-app/main/default/objects/Airplane__c/fields/Squawk__c.field-meta.xml
<CustomField>
    <fullName>Squawk__c</fullName>
    <description>The transponder code aka Squawk. Can be null.</description>
    <label>Squawk</label>
    <length>20</length>
    <type>Text</type>
</CustomField>