force-app/main/default/objects/Airplane__c/fields/Time_Position__c.field-meta.xml
<CustomField>
    <fullName>Time_Position__c</fullName>
    <description>Unix timestamp (seconds) for the last position update. Can be null if no position report was received by OpenSky within the past 15s.</description>
    <label>Time Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>